--- a/static/css/text.sass
+++ b/static/css/text.sass
@@ -51,3 +51,10 @@ a.link-unstyled:hover
 
 .text-serif
   font-family: "Noto Serif SC", serif
+
+#content-container ol li a,
+#content-container ul li a 
+  word-break:     break-word
+  -webkit-hyphens: auto
+  -moz-hyphens:    auto
+  hyphens:         auto
